# ya-passport-auth

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  PLAN.md  README.md  SECURITY.md  e2e_all_flows.py  e2e_debug.py  e2e_test.py  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecard.yml  secrets-nightly.yml
src/ya_passport_auth/: __init__.py  client.py  config.py  constants.py  credentials.py  exceptions.py  http.py  logging.py  models.py  oauth.py  rate_limit.py
src/ya_passport_auth/flows/: __init__.py  _payload.py  _polling.py  _token_exchange.py  account.py  cookie_login.py  device_code.py  glagol.py  password.py  qr.py  quasar.py  session.py
src/ya_passport_auth/ma/: __init__.py  _mass.py  borrow.py  cascade.py  config.py  errors.py  flow.py  page.py  routes.py  strings.py  tokens.py
tests/: conftest.py  test_oauth.py
tests/fixtures/: csrf_bare_global.html  csrf_input_attr.html  csrf_js_single.html  csrf_json_script.html  csrf_missing.html  csrf_window_global.html
tests/flows/: test_account.py  test_cookie_login.py  test_device_code.py  test_glagol.py  test_password.py  test_qr.py  test_quasar.py  test_session.py  test_token_exchange.py
tests/integration/: test_device_login.py  test_no_token_leak.py  test_passport_client.py  test_password_auth.py
tests/ma/: conftest.py  test_borrow.py  test_cascade.py  test_config.py  test_errors.py  test_flow.py  test_import_purity.py  test_page.py  test_routes.py  test_strings.py  test_tokens.py
tests/unit/: test_config.py  test_credentials.py  test_csrf_fuzz.py  test_exceptions.py  test_http_safe_client.py  test_import.py  test_logging_redaction.py  test_rate_limit.py  test_secretstr.py
