[build-system]
requires = ["hatchling>=1.25", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "ya-passport-auth"
dynamic = ["version"]
description = "Async Yandex Passport (mobile) auth library for Music Assistant providers"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Mikhail Nevskiy" }]
keywords = [
    "yandex",
    "passport",
    "oauth",
    "music-assistant",
    "async",
    "aiohttp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.10,<4",
    "yarl>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "aioresponses>=0.7.6",
    "hypothesis>=6",
    "mypy>=1.11",
    "ruff>=0.6",
    "bandit[toml]>=1.7",
    "pip-audit>=2.7",
    "cyclonedx-bom>=4",
    "liccheck>=0.9",
    "pre-commit>=3.8",
]

[project.urls]
Homepage = "https://github.com/trudenboy/ya-passport-auth"
Repository = "https://github.com/trudenboy/ya-passport-auth"
Issues = "https://github.com/trudenboy/ya-passport-auth/issues"
Changelog = "https://github.com/trudenboy/ya-passport-auth/blob/main/CHANGELOG.md"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0.dev0"

[tool.hatch.build.hooks.vcs]
version-file = "src/ya_passport_auth/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ya_passport_auth"]

[tool.hatch.build.targets.sdist]
include = [
    "src/ya_passport_auth",
    "tests",
    "pyproject.toml",
    "README.md",
    "LICENSE",
    "NOTICE",
    "CHANGELOG.md",
    "SECURITY.md",
]

# ---------------------------------------------------------------------------
# mypy — strict mode
# ---------------------------------------------------------------------------
[tool.mypy]
strict = true
python_version = "3.12"
files = ["src", "tests"]
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_explicit = true
enable_error_code = [
    "redundant-expr",
    "truthy-bool",
    "ignore-without-code",
    "possibly-undefined",
]

[[tool.mypy.overrides]]
module = ["aioresponses", "aioresponses.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# ruff — lint + format
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit
    "ASYNC",
    "RUF",  # ruff-specific
    "PL",   # pylint
    "TRY",  # tryceratops
    "PERF", # perflint
    "D",    # pydocstyle
]
ignore = [
    "D203",    # one-blank-line-before-class (conflicts with D211)
    "D213",    # multi-line-summary-second-line (conflicts with D212)
    "D105",    # magic-method docstrings (class docstring is enough)
    "D107",    # __init__ docstring (class docstring is enough)
    "PLR0913", # too-many-arguments (auth flows legitimately need several)
    "TRY003",  # long exception messages — clarity > ceremony
    "TRY301",  # abstract `raise` to inner function — needless indirection
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",   # assert is fine in tests
    "S105",   # hardcoded password/token strings (fixtures)
    "S106",
    "PLR2004", # magic values in assertions
    "D",       # docstrings not required in tests
]
"src/ya_passport_auth/_version.py" = ["D", "UP"]
"src/ya_passport_auth/http.py" = ["PLR2004"]  # HTTP status codes are not magic
"src/ya_passport_auth/constants.py" = ["S105"]  # public client IDs, not secrets
"src/ya_passport_auth/flows/quasar.py" = ["S105"]  # URL, not a password
"e2e_test.py" = ["T20", "S101", "S105", "D", "PLR"]   # CLI script
"e2e_debug.py" = ["T20", "S101", "S105", "D", "PLR"]  # CLI script
"e2e_all_flows.py" = ["T20", "S101", "S105", "D", "PLR", "ASYNC250"]  # interactive CLI script

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=ya_passport_auth",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=95",
]
testpaths = ["tests"]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:aiohttp.*",
]

[tool.coverage.run]
branch = true
source = ["ya_passport_auth"]
parallel = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_also = [
    "if TYPE_CHECKING:",
    "@overload",
    "raise NotImplementedError",
    "pragma: no cover",
]

# ---------------------------------------------------------------------------
# bandit
# ---------------------------------------------------------------------------
[tool.bandit]
exclude_dirs = ["tests", "scripts"]
